jerry-core/parser/js/new-parser/tests/js/return-statement-not-within-a-function.js.expected

--- Script parsing start ---


--- Script parsing end ---

Parse error 'Return statement must be inside a function body.' at line: 3 col: 1
