jerry-core/parser/js/new-parser/tests/js/return-statement-not-within-a-function.js
/* This test contains return statement parser negative tests. */

return;
